name change to rldb = replicated lmdb

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>lldb by mauricioscastro</title>
+    <title>rldb by mauricioscastro</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>lldb</h1>
+        <h1>rldb</h1>
         <h2 style="width: 100%; color: #ffffff">a lmdb + leveldb + bookkeeper replication experiment</h2>
       </div>
     </header>
@@ -29,17 +29,17 @@
         <section id="main-content">
 
 <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to LLDB</h3>
-        <p>lldb is a subproject of <a href="https://github.com/mauricioscastro/basex-lmdb">basex-lmdb</a>
+        <p>rldb is a subproject of <a href="https://github.com/mauricioscastro/basex-lmdb">basex-lmdb</a>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/mauricioscastro/lldb" class="ghbutton"><small>View project on</small> GitHub</a>
+          <a href="https://github.com/mauricioscastro/rldb" class="ghbutton"><small>View project on</small> GitHub</a>
 
-          <a href="https://github.com/mauricioscastro/lldb/zipball/master" class="button">
+          <a href="https://github.com/mauricioscastro/rldb/zipball/master" class="button">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/mauricioscastro/lldb/tarball/master" class="button">
+          <a href="https://github.com/mauricioscastro/rldb/tarball/master" class="button">
             <small>Download</small>
             .tar.gz file
           </a>
