name change to rldb = replicated lmdb

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>rldb</h1>
-        <h2 style="width: 100%; color: #ffffff">a lmdb + leveldb + bookkeeper replication experiment</h2>
+        <h2 style="width: 100%; color: #ffffff">replicated lmdb: a lmdb + leveldb + bookkeeper experiment</h2>
       </div>
     </header>
 
