name change to rldb = replicated lmdb

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to LLDB</h3>
+<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to RLDB</h3>
         <p>rldb is a subproject of <a href="https://github.com/mauricioscastro/basex-lmdb">basex-lmdb</a>
         </section>
 
