--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>rldb by mauricioscastro</title>
+    <title>rlmdb by mauricioscastro</title>
   </head>
 
   <body>
@@ -28,18 +28,18 @@
       <div class="inner clearfix">
         <section id="main-content">
 
-<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to RLDB</h3>
-        <p>rldb is a subproject of <a href="https://github.com/mauricioscastro/basex-lmdb">basex-lmdb</a>
+<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to RLMDB</h3>
+        <p>rlmdb is a subproject of <a href="https://github.com/mauricioscastro/basex-lmdb">basex-lmdb</a>
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/mauricioscastro/rldb" class="ghbutton"><small>View project on</small> GitHub</a>
+          <a href="https://github.com/mauricioscastro/rlmdb" class="ghbutton"><small>View project on</small> GitHub</a>
 
-          <a href="https://github.com/mauricioscastro/rldb/zipball/master" class="button">
+          <a href="https://github.com/mauricioscastro/rlmdb/zipball/master" class="button">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/mauricioscastro/rldb/tarball/master" class="button">
+          <a href="https://github.com/mauricioscastro/rlmdb/tarball/master" class="button">
             <small>Download</small>
             .tar.gz file
           </a>
