--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>rldb</h1>
+        <h1>rlmdb</h1>
         <h2 style="width: 100%; color: #ffffff">replicated lmdb: a lmdb + leveldb + bookkeeper experiment</h2>
       </div>
     </header>
