--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>rlmdb</h1>
-        <h2 style="width: 100%; color: #ffffff">replicated lmdb: a lmdb + leveldb + bookkeeper experiment</h2>
+        <h2 style="width: 100%; color: #ffffff">replicated lmdb: a lmdb + bookkeeper experiment</h2>
       </div>
     </header>
 
